// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render relation select when geo field is geo_point 1`] = `
<EuiForm>
  <EuiFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label="Geometry label"
    labelType="label"
  >
    <EuiFieldText
      compressed={true}
      onChange={[Function]}
      value="My shape"
    />
  </EuiFormRow>
  <MultiIndexGeoFieldSelect
    fields={
      Array [
        Object {
          "geoFieldName": "my geo field",
          "geoFieldType": "geo_point",
          "indexPatternId": 1,
          "indexPatternTitle": "My index",
        },
      ]
    }
    onChange={[Function]}
    selectedField={
      Object {
        "geoFieldName": "my geo field",
        "geoFieldType": "geo_point",
        "indexPatternId": 1,
        "indexPatternTitle": "My index",
      }
    }
  />
  <ActionSelect
    onChange={[Function]}
    value="ACTION_GLOBAL_APPLY_FILTER"
  />
  <EuiSpacer
    size="m"
  />
  <EuiTextAlign
    textAlign="right"
  >
    <EuiButton
      fill={true}
      isDisabled={false}
      onClick={[Function]}
      size="s"
    >
      Create filter
    </EuiButton>
  </EuiTextAlign>
</EuiForm>
`;

exports[`should not show "within" relation when filter geometry is not closed 1`] = `
<EuiForm>
  <EuiFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label="Geometry label"
    labelType="label"
  >
    <EuiFieldText
      compressed={true}
      onChange={[Function]}
      value="My shape"
    />
  </EuiFormRow>
  <MultiIndexGeoFieldSelect
    fields={
      Array [
        Object {
          "geoFieldName": "my geo field",
          "geoFieldType": "geo_shape",
          "indexPatternId": 1,
          "indexPatternTitle": "My index",
        },
      ]
    }
    onChange={[Function]}
    selectedField={
      Object {
        "geoFieldName": "my geo field",
        "geoFieldType": "geo_shape",
        "indexPatternId": 1,
        "indexPatternTitle": "My index",
      }
    }
  />
  <EuiFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label="Spatial relation"
    labelType="label"
  >
    <EuiSelect
      compressed={true}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "intersects",
            "value": "INTERSECTS",
          },
          Object {
            "text": "disjoint",
            "value": "DISJOINT",
          },
        ]
      }
      value="INTERSECTS"
    />
  </EuiFormRow>
  <ActionSelect
    onChange={[Function]}
    value="ACTION_GLOBAL_APPLY_FILTER"
  />
  <EuiSpacer
    size="m"
  />
  <EuiTextAlign
    textAlign="right"
  >
    <EuiButton
      fill={true}
      isDisabled={false}
      onClick={[Function]}
      size="s"
    >
      Create filter
    </EuiButton>
  </EuiTextAlign>
</EuiForm>
`;

exports[`should render error message 1`] = `
<EuiForm>
  <EuiFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label="Geometry label"
    labelType="label"
  >
    <EuiFieldText
      compressed={true}
      onChange={[Function]}
      value="My shape"
    />
  </EuiFormRow>
  <MultiIndexGeoFieldSelect
    fields={
      Array [
        Object {
          "geoFieldName": "my geo field",
          "geoFieldType": "geo_point",
          "indexPatternId": 1,
          "indexPatternTitle": "My index",
        },
      ]
    }
    onChange={[Function]}
    selectedField={
      Object {
        "geoFieldName": "my geo field",
        "geoFieldType": "geo_point",
        "indexPatternId": 1,
        "indexPatternTitle": "My index",
      }
    }
  />
  <ActionSelect
    onChange={[Function]}
    value="ACTION_GLOBAL_APPLY_FILTER"
  />
  <EuiSpacer
    size="m"
  />
  <EuiFormErrorText>
    Simulated error
  </EuiFormErrorText>
  <EuiTextAlign
    textAlign="right"
  >
    <EuiButton
      fill={true}
      isDisabled={false}
      onClick={[Function]}
      size="s"
    >
      Create filter
    </EuiButton>
  </EuiTextAlign>
</EuiForm>
`;

exports[`should render relation select when geo field is geo_shape 1`] = `
<EuiForm>
  <EuiFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label="Geometry label"
    labelType="label"
  >
    <EuiFieldText
      compressed={true}
      onChange={[Function]}
      value="My shape"
    />
  </EuiFormRow>
  <MultiIndexGeoFieldSelect
    fields={
      Array [
        Object {
          "geoFieldName": "my geo field",
          "geoFieldType": "geo_shape",
          "indexPatternId": 1,
          "indexPatternTitle": "My index",
        },
      ]
    }
    onChange={[Function]}
    selectedField={
      Object {
        "geoFieldName": "my geo field",
        "geoFieldType": "geo_shape",
        "indexPatternId": 1,
        "indexPatternTitle": "My index",
      }
    }
  />
  <EuiFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label="Spatial relation"
    labelType="label"
  >
    <EuiSelect
      compressed={true}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "intersects",
            "value": "INTERSECTS",
          },
          Object {
            "text": "disjoint",
            "value": "DISJOINT",
          },
          Object {
            "text": "within",
            "value": "WITHIN",
          },
        ]
      }
      value="INTERSECTS"
    />
  </EuiFormRow>
  <ActionSelect
    onChange={[Function]}
    value="ACTION_GLOBAL_APPLY_FILTER"
  />
  <EuiSpacer
    size="m"
  />
  <EuiTextAlign
    textAlign="right"
  >
    <EuiButton
      fill={true}
      isDisabled={false}
      onClick={[Function]}
      size="s"
    >
      Create filter
    </EuiButton>
  </EuiTextAlign>
</EuiForm>
`;
